--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,33 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
 			</plugin>
+			
+			<plugin> 
+        <groupId>com.microsoft.azure</groupId>  
+        <artifactId>azure-webapp-maven-plugin</artifactId>  
+        <version>1.7.0</version>  
+        <configuration>
+          <schemaVersion>V2</schemaVersion>
+          <resourceGroup>hello-world-rest-api-full-stack-rg</resourceGroup>
+          <appName>hello-world-rest-api-full-stack-ui</appName>
+          <pricingTier>P1v2</pricingTier>
+          <region>westeurope</region>
+          <runtime>
+            <os>windows</os>
+            <javaVersion>1.8.0_144</javaVersion>
+            <webContainer>tomcat 9.0.0</webContainer>
+          </runtime>
+          <deployment>
+            <resources>
+              <resource>
+                <directory>${project.basedir}/target</directory>
+               
+              </resource>
+            </resources>
+          </deployment>
+        </configuration>
+      </plugin> 
+			
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
